--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
 </head>
 
 <body>
+  <section class="container">
+    <h1> My Timer</h1>
+    <p class="relogio">
+      00:00:00
+    </p>
 
-  
+    <p>
+      <button class="iniciar">Iniciar</button>
+      <button class="pausar">Pausar</button>
+      <button class="zerar">Zerar</button>
+    </p>
+  </section>
 
-  <script src="./assets/js/main.js"></script>
+
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
